[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/global.gd" type="Script" id=1]
[ext_resource path="res://bullshit/texttileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/sound/slide.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/t/gainer.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/25th_hour.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/we_shop.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/winter.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/cello.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/death.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/t/jump.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/t/tumble.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/t/step2.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/t/slide.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/t/step1.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/t/landing.mp3" type="AudioStream" id=15]

[node name="Global" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Overlay" type="ColorRect" parent="."]
margin_left = -4.0
margin_top = -2.0
margin_right = 484.0
margin_bottom = 275.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="dumb" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 2 )
cell_size = Vector2( 5, 5 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 1703981, 51, 0, 1703982, 52, 0, 1703983, 33, 0, 1703984, 50, 0, 1703985, 52, 0, 3276890, 62, 0, 3276893, 33, 0, 3342425, 28, 0, 3342427, 30, 0, 3342430, 42, 0, 3407962, 1073741886, 0 )

[node name="keysmap" type="TileMap" parent="."]
modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 5, 7 )
format = 1

[node name="snd_slide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0
pitch_scale = 1.5

[node name="snd_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.25

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0

[node name="music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0

[node name="music4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="snd_gainer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0

[node name="snd_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.0

[node name="snd_landing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -18.0

[node name="snd_slide2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -18.0

[node name="snd_step1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -18.0

[node name="snd_step2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -18.0

[node name="snd_airtumble" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -18.0
